  - Adjust the caret color to some light color.


Data copied from tables are now added to paste history.
  Note: Paste history can be accessed through ctrl+shift+v or ctrl+shift+insert.

Driver drop-down of the Add Alias dialog: Driver definitions with loaded (checked blue) drivers are now displayed on top of the drop-down.
  Thanks to Peter G. Horvath for the patch.


Bug fixes:

Small UI fix concerning caret color configuration.

3.9.1 (02/24/2018)
==================

Enhancements:

Squirrel can now be started by the "java -jar squirrel-sql.jar" command. Nonetheless the the existing starter scripts work as usual.
 Thanks to Peter G. Horvath for the merge request.

Small improvements of Data Import Plugin:
  - Icon
  - Several tooltips
  - CSV separator and date format are remembered

Brushed up the Data Import Plugin quite a bit and made it a standard Plugin.
  See Object tree --> right mouse menu of table --> menu item "Import file (MS Excel or CSV)"

New right mouse menu item on tables "Copy colored rows to new window",
  which copies all rows that were colored before to a new window.

When "Find in SQL result" panel is hidden the SQL editor regains focus.
  This is convenient when a keyboard shortcut was assigned to the "Find in SQL result" function.

New tool bar button: Got to last edit location. Moves the SQL editor's cursor to the last edited location.

SQL execution: When result rows are being read, the number of rows read is displayed below the elapsed execution time.

Extension of keyboard shortcuts configuration: Existing default shortcuts can now also be removed instead of just replaced.

Made most menu entries of the table's right mouse menu work with keyboard shortcuts.
  Note: Most menus don't have predefined keyboard shortcuts.
        They may be defined using menu File --> "Global Preferences" --> tab "Keyboard shortcuts"

Extension of keyboard shortcuts configuration: Actions that don't have default shortcuts can now be assigned shortcuts.
